--- a/genai_gemini.ipynb
+++ b/genai_gemini.ipynb
@@ -54,7 +54,7 @@
       "cell_type": "code",
       "source": [
         "##setup the api key\n",
-        "genai.configure(api_key=\"AIzaSyAaSZ4EgQ8MqpbtwiWA3JsPMbcvKgTWeZU\")"
+        "genai.configure(api_key=\"\")"
       ],
       "metadata": {
         "id": "-H-eKq33cUs_"
